@@ -1,3 +1,10 @@
+2011-09-09  Michael Albinus  <michael.albinus@gmx.de>
+
+	* debbugs-gnu.el (debbugs-gnu-search): Add full text search.
+	(debbugs-gnu): Use `unwind-protect'.
+	(debbugs-gnu-get-bugs): Call `debbugs-search-est' for full text
+	search.
+
 2011-09-06  Michael Albinus  <michael.albinus@gmx.de>
 
 	* debbugs.el (debbugs-get-status): Handle the case of nil
